# cangrebot

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Shuttle.toml  TODO.md  build.rs  default.nix  flake.nix  justfile  run  rust-toolchain.toml
.github/workflows/: cd.yml  ci.yml  docker.yml  rust-build-deploy.yml
crates/gen_welcome/: Cargo.toml
crates/gen_welcome/src/: error.rs  lib.rs  main.rs
dep-installer-hack/: Cargo.toml  Shuttle.toml  build.rs
dep-installer-hack/src/: main.rs
doc/: SUBMODULOS.md  VARIABLES.md
src/: bot.rs  build.rs  commands.rs  handler.rs  main.rs  secrets.rs  utils.rs
src/api/: auth.rs  mod.rs
src/api/routes/: daily_challenge.rs  mod.rs  send_message.rs  send_stats.rs  showcase.rs  showcase_sync.rs
src/bootstrap/: mod.rs
src/bot/: commands.rs  events.rs  mod.rs  util.rs
src/bot/commands/: ask.rs  clear.rs  crate_docs.rs  estadistica.rs  explain.rs  hello.rs  help.rs  invite.rs  krate.rs  ping.rs  selftimeout.rs  stats.rs  suggest.rs  wipe_commands.rs
src/bot/commands/krate/: fetch.rs
src/bot/commands/suggest/: cancelled.rs  implemented.rs  mod.rs  new.rs
src/bot/commands/tts/: begin.rs  end.rs  join.rs  leave.rs  mod.rs  skip.rs  stop.rs  tts.rs  tts_normalizer.rs  tts_regex.rs
src/bot/events/: anti_spam.rs  compile.rs  compiler.rs  join.rs  new_members_mention.rs  read_github_links.rs  temporal_voice.rs  tts.rs
src/bot/events/compile/: api.rs
src/bot/events/godbolt/: compiler.rs  main_fixer.rs  mangling.rs  mod.rs  parse_args.rs  request.rs  response.rs  versions.rs
src/commands/: mod.rs  ping.rs
src/config/: general_command_loader.rs  mod.rs  setup.rs  slash_command_loader.rs  songbird_config.rs
src/events/: anti_spam.rs  daily_challenge.rs  join.rs  mod.rs  new_members_mention.rs  read_github_links.rs  send_message.rs
src/general_commands/: compile.rs  meetups.rs  mod.rs  ping.rs  songbird_commands.rs
src/music/: join.rs  mod.rs  store.rs
src/music/events/: end.rs  error.rs  mod.rs
src/music/models/: auto_leave.rs  config.rs  mod.rs  playlist_item.rs  volume.rs
src/slash_commands/: add.rs  attachmentinput.rs  crate_lib.rs  explica.rs  id.rs  invite.rs  join.rs  mod.rs  numberinput.rs  ping.rs  play.rs  send_project.rs  sugerencia.rs  welcome.rs  wonderful_command.rs
src/startup/: config.rs  mod.rs
static/: compiler_help.txt
