workspace = { members = ["crates/gen_welcome"] }

[package]
name = "cangrebot"
version = "0.1.0"
edition = "2021"
authors = [
    "Sergio Meneses <sergioalmeneses@gmail.com>",
    "Daniel Solarte <contact@danielsolarte.com>",
]
description = "A Discord Bot made with Rust from RustLangEs Community"
readme = "README.md"

[dependencies]
gen_welcome = { version = "0.1.0", path = "crates/gen_welcome" }

anyhow = "1.0.66"
axum = "0.7.5"
chrono = "0.4.38"
color-eyre = "0.6.2"
poise = "0.6.1"
reqwest = { version = "0.11.27", features = [
    "json",
] } # Version used by songbird::input::YoutubeDl
regex = "1.10.2"
scraper = { version = "0.19.0", features = [
    "indexmap",
    "deterministic",
    "atomic",
] }
serde = "1.0.188"
serde_json = "1.0.105"
tokio_schedule = "0.3.2"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
once_cell = "1.18.0"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
semver = "1.0.26"
thiserror = "2.0.12"
