workspace = { members = ["crates/gen_welcome"] }

[package]
name = "cangrebot"
version = "0.1.0"
edition = "2021"
description = "A Discord Bot made with Rust from RustLangEs Community"
readme = "README.md"

[dependencies]
gen_welcome = { version = "0.1.0", path = "crates/gen_welcome" }

anyhow = "1.0.98"
reqwest = { version = "0.12.22", default-features = false, features = [
	"rustls-tls",
	"json",
] }
axum = "0.7.9"
chrono = "0.4.41"
color-eyre = "0.6.5"
poise = "0.6.1"
regex = "1.11.1"
scraper = { version = "0.19.1", features = [
	"indexmap",
	"deterministic",
	"atomic",
] }
serde = "1.0.219"
serde_json = "1.0.141"
tokio_schedule = "0.3.2"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
once_cell = "1.21.3"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
semver = "1.0.26"
thiserror = "2.0.12"
urlencoding = "2.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

symphonia = { version = "0.5", features = ["mp3"] }
songbird = { version = "0.5", default-features = false, features = [
	"serenity",
	"gateway",
	"driver",
	"tungstenite",
	"rustls",
	"builtin-queue",
] }
uuid = { version = "1", features = ["v4"] }
